--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
 	},
 	"scripts": {
 		"build": "webpack --mode production",
-		"lint": "eslint --quiet '**/*.js'"
+		"lint": "eslint --quiet '**/*.js'",
+		"preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
 	},
 	"lint-staged": {
 		"**/*.js": [
