--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@ckeditor/ckeditor5-build-classic",
+	"name": "ckeditor5-build-classic-text-alignment-mc",
 	"version": "12.4.0",
 	"description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
 	"keywords": [
@@ -88,6 +88,7 @@
 		}
 	},
 	"dependencies": {
-		"@ckeditor/ckeditor5-alignment": "^11.2.0"
+		"@ckeditor/ckeditor5-alignment": "^11.2.0",
+		"@ckeditor/ckeditor5-upload": "^15.0.0"
 	}
 }
